--- a/index.html
+++ b/index.html
@@ -6,5 +6,33 @@
     <link rel="stylesheet" href="css/default.css" type="text/css">
   </head>
   <body>
+    <header>
+      <p>ヘッダーだよ</p>
+    </header>
+    <article class="box">
+      <h2>あ</h2>
+      <p>あ</p>
+      <p>あ</p>
+      <p>あ</p>
+    </article>
+    <article class="box">
+      <h2>い</h2>
+      <p>い</p>
+      <p>い</p>
+      <p>い</p>
+    </article>
+    <article class="box">
+      <h2>う</h2>
+      <p>う</p>
+      <p>う</p>
+    </article>
+    <article class="box">
+      <h2>え</h2>
+      <p>え</p>
+      <p>え</p>
+      <p>え</p>
+      <p>え</p>
+      <p>え</p>
+    </article>
   </body>
 </html>
