--- a/index.html
+++ b/index.html
@@ -34,5 +34,11 @@
       <p>え</p>
       <p>え</p>
     </article>
+    <aside>
+      <p>サイドバーだよ</p>
+    </aside>
+    <footer>
+      <p>フッターだよ</p>
+    </footer>
   </body>
 </html>
