--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <p>ヘッダーだよ</p>
     </header>
     <section id="main">
+      <p>「お」は何処へ...</p>
       <article class="box">
         <h2>あ</h2>
         <p>あ</p>
