--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </header>
     <section id="main">
       <p>「お」は何処へ...</p>
+      <img id="find_picture" src="kaban_sagasu_man.png" alt="find_man">
       <article class="box">
         <h2>あ</h2>
         <p>あ</p>
