--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <header>
       <p>ヘッダーだよ</p>
+      <p>ヘッダーだよ</p>
+      <p>ヘッダーだよ</p>
     </header>
     <section id="main">
       <p>「お」は何処へ...</p>
@@ -40,8 +42,12 @@
     </section>
     <aside>
       <p>サイドバーだよ</p>
+      <p>サイドバーだよ</p>
+      <p>サイドバーだよ</p>
     </aside>
     <footer>
+      <p>フッターだよ</p>
+      <p>フッターだよ</p>
       <p>フッターだよ</p>
     </footer>
   </body>
